--- a/package.json
+++ b/package.json
@@ -32,5 +32,6 @@
     "tailwindcss": "^3.4.1",
     "typescript": "^5"
   },
-  "proxy": "https://us-south.ml.cloud.ibm.com"
+  "proxy": "https://*.cloud.ibm.com"
+
 }
