--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-NEXT_PUBLIC_API_KEY = 'nzz-AKcrNQc28qgtVf0TWKU0sTqn__NTlBUnSCDTDLA-'
+NEXT_PUBLIC_API_KEY = "1615dvHzeWd1SI_NeFsMmedN3g-15cINFFimBrNV70WL"
 DISABLE_ESLINT_PLUGIN=true
